--- a/lab2/contentcreators-lab2-part4.css
+++ b/lab2/contentcreators-lab2-part4.css
@@ -3,7 +3,7 @@ track, artist, album, album_cover, release_date, genres {
 }
 
 track {
-  font-size: 80%;
+  font-size: .8em;
 }
 artist {
   color: blue;
