Added all song contributions

--- a/lab2/contentcreators-lab2-part4.css
+++ b/lab2/contentcreators-lab2-part4.css
@@ -53,3 +53,11 @@ image {
 #III { 
   background-image: url("images/Brockhampton_-_Saturation_III.png");
 }
+
+#ShootMe { 
+  background-image: url("images/Shootmeyouthpart1.jpg");
+}
+
+#Moonrise { 
+  background-image: url("images/Moonrise_(Day6_album)-cover.jpg");
+}
