Added album cover for two songs, added in part 4

--- a/lab2/contentcreators-lab2-part4.css
+++ b/lab2/contentcreators-lab2-part4.css
@@ -61,3 +61,11 @@ image {
 #Moonrise { 
   background-image: url("images/Moonrise_(Day6_album)-cover.jpg");
 }
+
+#Currents {
+  background-image: url("images/Currents.jpg");
+}
+
+#Good_Kid_M.A.A.D._City {
+  background-image: url("images/Good\ Kid\,\ M.A.A.D.\ City.jpg");
+}
