Ficed GKMC link on part 4

--- a/lab2/contentcreators-lab2-part4.css
+++ b/lab2/contentcreators-lab2-part4.css
@@ -67,6 +67,6 @@ image {
   background-image: url("images/Currents.jpg");
 }
 
-#Good_Kid_M.A.A.D._City {
+#GKMC{
   background-image: url("images/Good\ Kid\,\ M.A.A.D.\ City.jpg");
 }
