added last 2 songs to part4 xml

--- a/lab2/contentcreators-lab2-part4.css
+++ b/lab2/contentcreators-lab2-part4.css
@@ -50,22 +50,22 @@ image {
   background-image: url("images/A1MwaIeBpwL._AC_SL1500_.jpg");
 }
 
-#III { 
+#III {
   background-image: url("images/Brockhampton_-_Saturation_III.png");
 }
 
-#ShootMe { 
+#ShootMe {
   background-image: url("images/Shootmeyouthpart1.jpg");
 }
 
-#Moonrise { 
+#Moonrise {
   background-image: url("images/Moonrise_(Day6_album)-cover.jpg");
 }
 
-#Currents {
-  background-image: url("images/Currents.jpg");
+#Narcissist {
+  background-image: url("images/Narcissist.jpg");
 }
 
-#Good_Kid_M.A.A.D._City {
-  background-image: url("images/Good\ Kid\,\ M.A.A.D.\ City.jpg");
+#Cautious {
+  background-image: url("images/Cautious.jpg");
 }
