added currents picture

--- a/lab2/contentcreators-lab2-part4.css
+++ b/lab2/contentcreators-lab2-part4.css
@@ -73,3 +73,7 @@ image {
 #GKMC{
   background-image: url("images/Good\ Kid\,\ M.A.A.D.\ City.jpg");
 }
+
+#Currents {
+  background-image: url("images/Currents.jpg");
+}
