--- a/lab2/contentcreators-lab2-part4.css
+++ b/lab2/contentcreators-lab2-part4.css
@@ -18,8 +18,16 @@ track {
 artist {
   color: blue;
 }
+artist a {
+  text-decoration: none;
+}
 album {
   font-style: italic;
+}
+
+album a {
+  text-decoration: none;
+  color: black;
 }
 
 image {
