--- a/lab2/contentcreators-lab2-part4.css
+++ b/lab2/contentcreators-lab2-part4.css
@@ -2,6 +2,9 @@ song {
   font-size: 1.25rem;
   display: block;
   margin-top: 1.25rem;
+  background-color: #ccc;
+  border-radius: 1rem;
+  padding: .8rem;
 }
 
 heading {
