added more style

--- a/lab2/contentcreators-lab2-part4.css
+++ b/lab2/contentcreators-lab2-part4.css
@@ -2,7 +2,7 @@ song {
   font-size: 1.25rem;
   display: block;
   margin-top: 1.25rem;
-  background-color: #ccc;
+  background-color: rgb(191, 204, 230);
   border-radius: 1rem;
   padding: .8rem;
 }
