fixed white text on white background

--- a/lab3/style.css
+++ b/lab3/style.css
@@ -20,7 +20,9 @@ html, body {
 }
 
 .list-group-horizontal li {
-    border: 0;
+    border: 0; 
+    background-color: #222629;
+    color: white;
 }
 
 .profilePhoto {
