--- a/lab3/style.css
+++ b/lab3/style.css
@@ -1,7 +1,7 @@
 html, body {
-    height: 100% - (2rem);
-    background-color: #222629;
-    color: white;
+  height: 100%;
+  background-color: #222629;
+  color: white;
 }
 
 .profiles a {
@@ -10,87 +10,89 @@ html, body {
 }
 
 .name {
-    margin: 2rem 0 0 2rem;
+  position: relative;
+  top: 2rem;
+  margin: 0 0 2rem 2rem;
 }
 
 .list-group-horizontal {
-    width: calc(100% - min(20vw, 40vh) - 6rem);
-    margin-left: 2rem;
-    font-style: italic;
+  width: calc(100% - min(20vw, 40vh) - 6rem);
+  margin-left: 2rem;
+  font-style: italic;
 }
 
 .list-group-horizontal li {
-    border: 0; 
-    background-color: #222629;
-    color: white;
+  border: 0; 
+  background-color: #222629;
+  color: white;
 }
 
 .profilePhoto {
-    width: min(20vw, 40vh);
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 2rem;
+  width: min(20vw, 40vh);
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 2rem;
 }
 
 .Summary {
-    width: calc(100% - min(20vw, 40vh) - 6rem);
-    margin-left: 2rem;
-    margin-right: 2rem;
+  width: calc(100% - min(20vw, 40vh) - 6rem);
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 .Skills {
-    width: calc(100% - min(20vw, 40vh) - 6rem);
-    margin-left: 2rem;
-    margin-right: 2rem;
+  width: calc(100% - min(20vw, 40vh) - 6rem);
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 .Education {
-    margin-left: 2rem;
+  margin-left: 2rem;
 }
 
 .Education li {
-    font-size: medium;
+  font-size: medium;
 }
 
 .Education h3 {
-    font-size: large;
+  font-size: large;
 }
 .Education h4 {
-    font-size: medium;
-    font-style: italic;
+  font-size: medium;
+  font-style: italic;
 }
 
 .Education i {
-    font-size: medium;
+  font-size: medium;
 }
 
 .education-item {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .Experience {
-    margin-left: 2rem;
+  margin-left: 2rem;
 }
 
 .Experience li {
-    font-size: medium;
+  font-size: medium;
 }
 
 .Experience h3 {
-    font-size: large;
+  font-size: large;
 }
 .Experience h4 {
-    font-size: medium;
-    font-style: italic;
+  font-size: medium;
+  font-style: italic;
 }
 
 .Experience i {
-    font-size: medium;
+  font-size: medium;
 }
 
 .experience-item {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 /* Homepage --------------------------------*/
