--- a/JamSesh/assets/css/Homepage-Nav.css
+++ b/JamSesh/assets/css/Homepage-Nav.css
@@ -1,6 +1,7 @@
 .navigation-clean-button {
   padding-top: 1rem;
   padding-bottom: 1rem;
+  background: rgb(58,175,169);
 }
 
 .navigation-clean-button .navbar-brand {
