Changed the button border color

--- a/JamSesh/assets/css/User-Profile.css
+++ b/JamSesh/assets/css/User-Profile.css
@@ -102,7 +102,7 @@ hr {
   /* background: #242424; */
   /* width: 150px; */
   /* height: 30; */
-  border: 1px solid black;
+  border: 1px solid grey;
   flex-basis: auto;
   color: rgba(0, 0, 0, 0.87);
   border-radius: 8px;
