--- a/JamSesh/assets/css/admin.css
+++ b/JamSesh/assets/css/admin.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap'); */
 
 *{
   margin: 0;
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  font-family: 'Josefin Sans', sans-serif;
+  /* font-family: 'Josefin Sans', sans-serif; */
 }
 
 body{
@@ -32,13 +32,13 @@ body{
   border-bottom: 1px solid #bdb8d7;
   border-bottom: 1px solid rgba(0,0,0,0.05);
   border-top: 1px solid rgba(255,255,255,0.08);
-}    
+}
 .wrapper .sidebar ul li:first-child{
   padding: 15px;
   /* border-bottom: 1px solid #bdb8d7; */
   border-bottom: 1px solid rgba(0,0,0,0.05);
   border-top: none;
-}  
+}
 .wrapper .sidebar ul li a{
   color: #bdb8d7;
   display: block;
@@ -47,10 +47,10 @@ body{
 .wrapper .sidebar ul li:hover{
   background-color: rgb(58,175,169);
 }
-    
+
 .wrapper .sidebar ul li:hover a{
   color: #fff;
-  
+
 }
 
 .wrapper .main_content{
