Sudios on user profile link to studio page now

--- a/JamSesh/assets/css/User-Profile.css
+++ b/JamSesh/assets/css/User-Profile.css
@@ -80,6 +80,11 @@ hr {
   color: rgb(255,255,255);
 }
 
+.studio:hover {
+  text-decoration: none;
+  color: rgb(255,255,255);
+}
+
 .studioTitle {
   font-size: 40px;
   font-weight: 500;
