buttons, updated instructions

--- a/lab5&6/hexed.css
+++ b/lab5&6/hexed.css
@@ -173,17 +173,19 @@ button {
   margin-left: 15%;
   width: 70%;
   height: 50px;
-  border: 1px solid grey;
-  border-radius: 8px;
   font-size: 20px;
   font-weight: 600;
   color: #474747;
   font-family: 'Sriracha', sans-serif;
+  border: double 5px transparent;
+  border-radius: 50px;
+  background-image: linear-gradient(90deg, rgb(255, 194, 194), white, rgb(219, 223, 255)80%),
+                    radial-gradient(circle at top left, rgb(238, 66, 66), rgb(238, 212, 66), rgb(89, 231, 89), rgb(0, 195, 255), rgb(159, 61, 240));
+  background-origin: border-box;
+  background-clip: content-box, border-box;
 }
-
 button:hover {
   background-image: linear-gradient(90deg, rgb(238, 66, 66), rgb(238, 212, 66), rgb(89, 231, 89), rgb(0, 195, 255), rgb(159, 61, 240));
-  
 }
 
 /*----Percents css------------------------------------------------------------*/
@@ -228,13 +230,13 @@ button:hover {
 /*----------------------------------------------------------------------------*/
 #Link {
   text-decoration: none;
-  display: inline-block;
   color: #303030;
-  background-image: linear-gradient(90deg, rgb(255, 92, 92),rgb(137, 255, 137), rgb(123, 224, 255));
+  background-image: linear-gradient(90deg, rgb(255, 129, 129), rgb(255, 227, 134), rgb(181, 255, 181), rgb(123, 224, 255));
   border-radius: 5px;
 }
 
 #Link:hover {
   color: #7c7979;
   font-weight: 700;
+  font-size: 1.2em;
 }
