--- a/lab5&6/hexed.css
+++ b/lab5&6/hexed.css
@@ -149,6 +149,7 @@ hr {
   border-radius: 5px;
   color: #474747;
   font-weight: 550;
+  font-family: 'Sriracha', sans-serif;
 }
 
 #Gtext {
@@ -157,6 +158,7 @@ hr {
   border-radius: 5px;
   color: #474747;
   font-weight: 550;
+  font-family: 'Sriracha', sans-serif;
 }
 
 #Btext {
@@ -165,6 +167,7 @@ hr {
   border-radius: 5px;
   color: #474747;
   font-weight: 550;
+  font-family: 'Sriracha', sans-serif;
 }
 
 /*----Button css--------------------------------------------------------------*/
