--- a/lab5&6/hexed.css
+++ b/lab5&6/hexed.css
@@ -73,9 +73,9 @@ hr {
 
 #box {
   margin: auto;
-  margin-top: 50px;
-  width: 250px;
-  height: 250px;
+  margin-top: 0px;
+  width: 150px;
+  height: 150px;
   border-style: solid;
   border-radius: 20px;
 }
@@ -89,11 +89,11 @@ hr {
   float: left;
 }
 
-#timer, #numguesses {
-  /* margin-left: auto;
-  margin-right: 20%; */
-  margin: 10% 20% 20px 20%;
-}
+/* #timer, #numguesses { */
+  /* margin-left: auto; */
+  /* margin-right: 20%; */
+  /* float: right; */
+/* } */
 /*----Display sliders and txt boxes in two columns----------------------------*/
 .sliders {
   float: left;
@@ -115,7 +115,7 @@ hr {
 }
 .slidecontainer {
   text-align: right;
-  margin-top: 41.5px;
+  margin-top: 0px;
   margin-right: 25px;
 }
 
@@ -134,13 +134,14 @@ hr {
 /*----Textbox css-------------------------------------------------------------*/
 .textbox {
   text-align: left;
-  margin-top: 68px;
   margin-left: 25px;
   margin-right: 20%;
 }
-
+#rtext {
+  margin-top: 23px;
+}
 #gtext, #btext {
-  margin-top: 81px;
+  margin-top: 45px;
 }
 
 #Rtext {
@@ -197,16 +198,17 @@ button:hover {
 }
 
 /*----Timer css---------------------------------------------------------------*/
-#timer {
-  text-align: center;
-  font-size: 50px;
-  margin-top: -15px;
-}
-
 #numguesses {
   text-align: center;
   font-size: 30px;
-  margin-top: -20px;
+  margin: 0px;
+  float: right;
+}
+
+#timer {
+  text-align: center;
+  font-size: 40px;
+  margin-top: 1%;
 }
 
 /*----Red css-----------------------------------------------------------------*/
