--- a/lab8/lab8.css
+++ b/lab8/lab8.css
@@ -1,17 +1,22 @@
 html {
   font-size: 120%;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
 
 body {
   background-color: rgb(31, 31, 31);
-  justify-content: center;
-  align-items: center;
   height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+
+  color: #ccb9b9;
 }
 
 #result {
-  margin-top: 5%;
+  margin-top: 40px;
+  text-align: center;
+  color: #ccb9b9;
+  font-size: 1.2em;
+  width: 100%;
 }
 
 #calcInterface {
@@ -19,13 +24,14 @@ body {
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
+  margin-top: 20px;
 }
 
 #input {
   margin-top: 20px;
   font-family: "Roboto", Helvetica, Arial, sans-serif;
-  width: 23.8rem;
-  padding: 0.75rem 1rem;
+  width: 25.95rem;
+  height: 3rem;
   text-align: right;
   font-size: 30px;
   background-color: rgb(31, 31, 31);
@@ -43,7 +49,7 @@ body {
 }
 
 #operationPad {
-  margin:auto;
+  margin-left: 27.9%;
   text-align: justify;
   width: 20rem;
   display: grid;
@@ -68,3 +74,4 @@ body {
   font-size: 1.2em;
   background-color: rgb(243, 107, 28);
 }
+
