--- a/lab8/lab8.css
+++ b/lab8/lab8.css
@@ -46,7 +46,7 @@ body {
 
 #input:focus {
   outline: none;
-  /* border: 3px solid rgb(44, 211, 211); */
+  border: 2px solid rgb(44, 211, 211);
 }
 
 #operationPad {
