--- a/JamSesh/assets/css/admin.css
+++ b/JamSesh/assets/css/admin.css
@@ -1,85 +1,108 @@
 /* @import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap'); */
+:root {
+  font-size: 16px;
+  font-family: 'Open Sans';
+  --text-primary: #b6b6b6;
+  --text-secondary: #ececec;
+  --bg-primary: #23232e;
+  --bg-secondary: #141418;
+  --transition-speed: 600ms;
+}
 
-*{
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-  /* font-family: 'Josefin Sans', sans-serif; */
+  background-color: #cecece;
 }
 
-body{
-   background-color: #cecece;
+body::-webkit-scrollbar {
+  width: 0.25rem;
 }
 
-.wrapper{
-  display: flex;
-  position: relative;
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
 }
 
-.wrapper .sidebar{
-  width: 200px;
-  height: 100%;
-  background: #3d3a3a;
-  padding: 50px 0px;
-  position: absolute;
+body::-webkit-scrollbar-thumb {
+  background: #6649b8;
 }
 
-
-.wrapper .sidebar ul li{
-  padding: 20px;
-  border-bottom: 1px solid #bdb8d7;
-  border-bottom: 1px solid rgba(0,0,0,0.05);
-  border-top: 1px solid rgba(255,255,255,0.08);
-}
-.wrapper .sidebar ul li:first-child{
-  padding: 15px;
-  /* border-bottom: 1px solid #bdb8d7; */
-  border-bottom: 1px solid rgba(0,0,0,0.05);
-  border-top: none;
-}
-.wrapper .sidebar ul li a{
-  color: #bdb8d7;
-  display: block;
+main {
+  margin-left: 5rem;
 }
 
-.wrapper .sidebar ul li:hover{
-  background-color: rgb(58,175,169);
-}
-
-.wrapper .sidebar ul li:hover a{
-  color: #fff;
-
-}
-
-.wrapper .main_content{
-  width: 100%;
-  margin-left: 200px;
-}
-
-.wrapper .main_content .header{
-  padding: 10px;
-  padding-right: 0;
-  padding-left: 5%;
-  background: #3d3a3a;
-  color: rgb(218, 218, 218);
-  font-weight: bold;
-  text-align: justify;
-  border-bottom: 1px solid rgba(255,255,255,0.18);
-  margin-bottom: 0%;
-}
-
-div.wrapper div.main_content div.status #sub {
+.sub {
   padding-top: 10px;
-  padding-bottom: 20px;
-  padding-left: 10%;
+  padding-bottom: 12.2vh;
   border: 1px solid rgba(255,255,255,0.18);
-  /* background-image: linear-gradient(90deg, #3d3a3a, #706d6d); */
-  background-color: #ffffff;;
+  background-color: #ffffff;
+  padding-left: 15%;
+  padding-right: 15%;
 }
-div.wrapper div.main_content div.status #sub h3{
-  color: rgb(218, 218, 218);
+
+.sub h3 {
   font-weight: bold;
-  color: #afa6df
+  color: rgb(60, 201, 194);
+}
+
+.sidebar {
+  position: fixed;
+  background-color: #3d3a3a;
+  transition: width 1s;
+  height: 100vh;
+}
+
+.nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+.nav-item {
+  width: 100%;
+  
+}
+
+.nav-item:last-child {
+  margin-bottom: 10vh;
+}
+
+.link {
+  display: flex;
+  align-items: center;
+  height: 5rem;
+  filter: grayscale(100%) opacity(0.7);
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+  font-size: 1.2rem;
+}
+
+.link:hover {
+  filter: grayscale(0%) opacity(1);
+  text-decoration: none;
+}
+
+.link-text {
+  display: none;
+  margin-left: 1rem;
+  color: rgb(60, 201, 194)
+}
+
+.link svg {
+  width: 2.3rem;
+  min-width: 2rem;
+  margin: 0 1.5rem;
+}
+
+.sidebar:hover {
+  width: 16rem;
+}
+
+.sidebar:hover .link-text {
+  display: inline;
 }
