--- a/JamSesh/assets/css/admin.css
+++ b/JamSesh/assets/css/admin.css
@@ -28,17 +28,17 @@ body::-webkit-scrollbar-thumb {
   background: #6649b8;
 }
 
-main {
+/* main {
   margin-left: 5rem;
-}
+} */
 
 .sub {
   padding-top: 10px;
-  padding-bottom: 12.2vh;
+  padding-bottom: 12vh;
   border: 1px solid rgba(255,255,255,0.18);
   background-color: #ffffff;
   padding-left: 15%;
-  padding-right: 15%;
+  padding-right: 30%;
 }
 
 .sub h3 {
@@ -49,7 +49,6 @@ main {
 .sidebar {
   position: fixed;
   background-color: #3d3a3a;
-  transition: width 1s;
   height: 100vh;
 }
 
@@ -63,13 +62,12 @@ main {
   height: 100%;
 }
 
-.nav-item {
+.nav-item, .ins {
   width: 100%;
-  
 }
 
-.nav-item:last-child {
-  margin-bottom: 10vh;
+.ins {
+  margin-top: 30vh;
 }
 
 .link {
@@ -77,8 +75,7 @@ main {
   align-items: center;
   height: 5rem;
   filter: grayscale(100%) opacity(0.7);
-  padding-top: 10vh;
-  padding-bottom: 10vh;
+  
   font-size: 1.2rem;
 }
 
@@ -89,7 +86,7 @@ main {
 
 .link-text {
   display: none;
-  margin-left: 1rem;
+  margin-left: 0.5rem;
   color: rgb(60, 201, 194)
 }
 
