tried to fix some edit profile bugs, failed

--- a/JamSesh/assets/css/User-Profile.css
+++ b/JamSesh/assets/css/User-Profile.css
@@ -52,6 +52,7 @@ hr {
 .studioHeader {
   color: rgb(34,34,34);
   font-weight: bold;
+  margin-top: 10px;
   padding: 10px;
   justify-content: space-between;
 }
